[Refactor] Decouple PrivilegeEntry's analyze and generate (#16999)
Co-authored-by: HangyuanLiu <460660596@qq.com>